# OpenGL-3D-Engine

./: .gitignore  CMakeLists.txt  DEPLOYMENT.md  DEPLOYMENT_READY.md  EMSCRIPTEN_MIGRATION.md  Info.plist  OPTIMIZATION_CHECKLIST.md  PRE_DEPLOYMENT_CHECKLIST.md  QUICK_START_WEB.md  README.md  README_WEB_DEPLOYMENT.md  WEB_DEPLOYMENT_SUMMARY.md  WEB_DOCS_INDEX.md  WEB_OPTIMIZATION.md  imgui.ini  index.html  rebuild.sh  shell_minimal.html
.github/workflows/: deploy.yml  github_deploy.yml  itchio_deploy.yml
OpenGL 3D Engine/: .gitignore  AppDelegate.h  AppDelegate.m  CMakeLists.txt  ViewController.h  ViewController.m  imgui.ini  main.cpp  main.m  main.mm  obj_loader.h  stb_image_impl.cpp
OpenGL 3D Engine.xcodeproj/: project.pbxproj
OpenGL 3D Engine.xcodeproj/xcuserdata/ray.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
OpenGL 3D Engine.xcodeproj/xcuserdata/ray.xcuserdatad/xcschemes/: xcschememanagement.plist
OpenGL 3D Engine/Base.lproj/: Main.storyboard
OpenGL 3D Engine/OBJ Models/Cube/: cube.mtl
OpenGL 3D Engine/OBJ Models/Instructions panel/: quad.mtl
OpenGL 3D Engine/OBJ Models/Level/: level.mtl
OpenGL 3D Engine/OBJ Models/Realistic tree/: Tree.mtl
OpenGL 3D Engine/OBJ_models/Cube/: cube.mtl
OpenGL 3D Engine/OBJ_models/Instructions_panel/: quad.mtl
OpenGL 3D Engine/OBJ_models/Level/: level.mtl
OpenGL 3D Engine/OBJ_models/Realistic_tree/: Tree.mtl
OpenGL 3D Engine/OBJ_models/Streetlight/: streetlight.mtl
OpenGL 3D Engine/OBJ_models/Wooden_fence/: wooden_fence.mtl
OpenGL 3D Engine/OBJ_models/modular-road/: modular_road.mtl
OpenGL 3D Engine/scene_models/level/: level.mtl
OpenGL 3D Engine/scene_models/realistic_tree/: Tree.mtl
OpenGL 3D Engine/src/: main old.txt  main.cpp
include/: asset_loader.h  camera.h  color.h  entity_manager.h  filesystem.h  light.h  material.h  mesh.h  mesh_loader.h  renderer.h  shader.h  shader_loading.h  shadowmap.h  skybox.h  texture_loader.h
lib/assimp/include/assimp/: revision.h
lib/glad/include/glad/: glad.h
res/scene_models/cone/: cone.mtl
res/scene_models/cube/: cube.mtl
res/scene_models/modular_road/: modular_road_pack.mtl
res/scene_models/realistic_tree/: tree_lod1.mtl
res/scene_models/sphere/: sphere.mtl
res/scene_models/statue/: statue_of_myself.mtl
res/scene_models/streetlight/: streetlight.mtl
res/shaders/: depth_prepass.fs  depth_prepass.vs  pbr.fs  pbr.vs  shadow.fs  shadow.vs  skybox.fs  skybox.vs  unlit.fs
scene_models/cube/: A23DTEX_Height.exr  cube.mtl
scene_models/plastic_table/: plastic_table.mtl
scene_models/realistic_tree/: Tree.mtl
src/: asset_loader.cpp  camera.cpp  entity_manager.cpp  filesystem.cpp  light.cpp  main.cpp  material.cpp  mesh_loader.cpp  renderer.cpp  shader_loading.cpp  shadowmap.cpp  skybox.cpp  texture_loader.cpp
